# agent-agreement-protocol

./: .gitignore  Anchor.toml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  aap-v1-architecture.md  package-lock.json  package.json  seed-devnet.js
.claude/: ralph-loop.local.md
api/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
api/src/: index.ts  program.ts
api/src/routes/: agents.ts  agreements.ts
content/: demo-shot-script.md  marketing-plan.md  video-storyboard.md  x-content-plan.md
frontend/: .env  .npmrc  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
idl/: aap_compressed.json  agent_agreement_protocol.json
programs/aap-compressed/: Cargo.toml
programs/aap-compressed/src/: constants.rs  errors.rs  lib.rs
programs/aap-compressed/src/instructions/: add_party.rs  cancel_agreement.rs  close_agreement.rs  fulfill_agreement.rs  mod.rs  propose_agreement.rs  register_agent.rs  register_sub_agent.rs  revoke_agent.rs  sign_agreement.rs  update_delegation.rs
programs/aap-compressed/src/state/: agent_identity.rs  agreement.rs  agreement_party.rs
programs/aap-compressed/tests/: test.rs
programs/agent-agreement-protocol/: Cargo.toml
scripts/: demo-v2-devnet.ts  generate-client.mjs  seed-demo.ts  seed-devnet.ts
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  pda.ts  types.ts
skill/: SKILL.md
tests/: agent-agreement-protocol.ts
(+94 files in other folders)
