[package]
name = "aap-compressed"
version = "0.1.0"
description = "Agent Agreement Protocol V2 — compressed accounts via Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aap_compressed"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.18.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }
light-hasher = "5.0.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

[dev-dependencies]
light-client = "0.18.0"
light-program-test = "0.18.0"
tokio = "1.36.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
